	* Fixed a bug in Vgrid_integrate: weight w should return to 1.0 after every i, j or k loop is finished 
	* Fixed a bug in routines.c, now runGB.py and main.py in tools/python/ should be working again instead of producing segfault

#############################################################################
                                 VERSION 1.1.0 
                                   
#############################################################################
- NEW FEATURES
	* Moved APBS user guide and tutorial to MediaWiki
	* Added in support for OpenMPI for parallel calculations
	* Added in command line support for Opal job submissions (Code by Samir Unni)
	* Allowed pathname containing spaces in input file, as long as the whole pathname is in quotes ("")
	* Documented 'make test' and related features
- MODIFICATIONS
	* Modified the function bcCalc to march through the data array linearly when setting boundary conditions. This removes duplication of grid points on the edge of the array and corners.
	* Clarified documentation on the IDs assigned to input maps, PQRs, parameter files, etc.
	* Updated tutorial to warn against spaces in APBS working directory path in VMD; updated user guide to warn against spaces in APBS installation path on Windows
	* 'make test' has been reconfigured to run before issuing make install (can be run from top directory)
	* Removed tools/visualization/vmd from tools directory in lieu of built-in support in VMD
	* Path lengths can now be larger than 80 characters
	* Expanded authorship list
	* Added in 'make test-opal' as a post install test (run from the examples install directory)
	* Added additional concentrations to protein-rna test case to better encompass experimental conditions used by Garcia-Garcia and Draper; this improves agreement with the published data
- BUG FIXES
	* Fixed typos in User Guide (ion keyword) and clarified SMPBE keyword usage
	* Fixed typo in User Guide (writemat: poission -> poisson)